added user id in header and company in request param